mlplatform/api/k8s/mlplatform-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlplatform-api-svc
  namespace: mlplatform
spec:
  selector:
    app: mlplatform-api
  ports:
  - protocol: TCP
    port: 8083
