mlplatform/api/k8s/mlplatform-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mlplatform-api-ingress
  namespace: mlplatform
  annotations:
    kubernetes.io/ingress.class: alb
spec:
#  tls:
#  - hosts:
#    - dev-context.adsrvr.org
#    secretName: dev-contextual-secret
  rules:
  - host: mlplatform.adsrvr.org
    http:
      paths:
      - path: /
        backend:
          serviceName: mlplatform-svc
          servicePort: 80
